@@ -1,3 +1,11 @@
+2009-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinWm.c: [Patch 2504402] Create icon bitmaps as device
+	independent bitmaps. This ensures the icon can be drawn properly
+	on various colour depth surfaces - in particular it fixes a
+	problem with remote desktop and looks better in the vista task
+	switching overlay. (cjmcdonald)
+
 2009-04-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
